tests/__snapshots__/api-toBeCallableWith.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeCallableWith: stderr 1`] = `
"Error: Expression can be called without arguments.

   9 |   test("expression can be called without arguments", () => {
  10 |     expect(() => null).type.toBeCallableWith();
> 11 |     expect(() => null).type.not.toBeCallableWith();
     |                                 ^
  12 |   });
  13 | 
  14 |   test("expression does not take arguments", () => {

       at ./__typetests__/toBeCallableWith.test.ts:11:33 ❭ when target is a value ❭ expression can be called without arguments

Error: Expression does not take arguments.

  14 |   test("expression does not take arguments", () => {
  15 |     expect(() => null).type.not.toBeCallableWith("one");
> 16 |     expect(() => null).type.toBeCallableWith("one");
     |                             ^
  17 |   });
  18 | 
  19 |   test("expression can be called with provided argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:16:29 ❭ when target is a value ❭ expression does not take arguments

Error: Expression can be called with provided argument.

  19 |   test("expression can be called with provided argument", () => {
  20 |     expect((a: string) => a).type.toBeCallableWith("one");
> 21 |     expect((a: string) => a).type.not.toBeCallableWith("one");
     |                                       ^
  22 |   });
  23 | 
  24 |   test("expression requires an argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:21:39 ❭ when target is a value ❭ expression can be called with provided argument

Error: Expression requires 1 argument.

  24 |   test("expression requires an argument", () => {
  25 |     expect((a: string) => a).type.not.toBeCallableWith();
> 26 |     expect((a: string) => a).type.toBeCallableWith();
     |                                   ^
  27 |   });
  28 | 
  29 |   test("type expression can be called without arguments", () => {

       at ./__typetests__/toBeCallableWith.test.ts:26:35 ❭ when target is a value ❭ expression requires an argument

Error: Type expression can be called without arguments.

  29 |   test("type expression can be called without arguments", () => {
  30 |     expect<() => null>().type.toBeCallableWith();
> 31 |     expect<() => null>().type.not.toBeCallableWith();
     |                                   ^
  32 |   });
  33 | 
  34 |   test("type expression does not take arguments", () => {

       at ./__typetests__/toBeCallableWith.test.ts:31:35 ❭ when target is a value ❭ type expression can be called without arguments

Error: Type expression does not take arguments.

  34 |   test("type expression does not take arguments", () => {
  35 |     expect<() => null>().type.not.toBeCallableWith("one");
> 36 |     expect<() => null>().type.toBeCallableWith("one");
     |                               ^
  37 |   });
  38 | 
  39 |   test("type expression can be called with provided argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:36:31 ❭ when target is a value ❭ type expression does not take arguments

Error: Type expression can be called with provided argument.

  39 |   test("type expression can be called with provided argument", () => {
  40 |     expect<(a: string) => string>().type.toBeCallableWith("one");
> 41 |     expect<(a: string) => string>().type.not.toBeCallableWith("one");
     |                                              ^
  42 |   });
  43 | 
  44 |   test("type expression requires an argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:41:46 ❭ when target is a value ❭ type expression can be called with provided argument

Error: Type expression requires 1 argument.

  44 |   test("type expression requires an argument", () => {
  45 |     expect<(a: string) => string>().type.not.toBeCallableWith();
> 46 |     expect<(a: string) => string>().type.toBeCallableWith();
     |                                          ^
  47 |   });
  48 | });
  49 | 

       at ./__typetests__/toBeCallableWith.test.ts:46:42 ❭ when target is a value ❭ type expression requires an argument

Error: Expression can be called without arguments.

  51 |   test("expression can be called without arguments", () => {
  52 |     expect(() => null).type.toBeCallableWith<[]>();
> 53 |     expect(() => null).type.not.toBeCallableWith<[]>();
     |                                 ^
  54 |   });
  55 | 
  56 |   test("expression does not take arguments", () => {

       at ./__typetests__/toBeCallableWith.test.ts:53:33 ❭ when target is a type ❭ expression can be called without arguments

Error: Expression does not take arguments.

  56 |   test("expression does not take arguments", () => {
  57 |     expect(() => null).type.not.toBeCallableWith<["one"]>();
> 58 |     expect(() => null).type.toBeCallableWith<["one"]>();
     |                             ^
  59 |   });
  60 | 
  61 |   test("expression can be called with provided argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:58:29 ❭ when target is a type ❭ expression does not take arguments

Error: Expression can be called with provided argument.

  61 |   test("expression can be called with provided argument", () => {
  62 |     expect((a: string) => a).type.toBeCallableWith<["one"]>();
> 63 |     expect((a: string) => a).type.not.toBeCallableWith<["one"]>();
     |                                       ^
  64 |   });
  65 | 
  66 |   test("expression requires an argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:63:39 ❭ when target is a type ❭ expression can be called with provided argument

Error: Expression requires 1 argument.

  66 |   test("expression requires an argument", () => {
  67 |     expect((a: string) => a).type.not.toBeCallableWith<[]>();
> 68 |     expect((a: string) => a).type.toBeCallableWith<[]>();
     |                                   ^
  69 |   });
  70 | 
  71 |   test("type expression can be called without arguments", () => {

       at ./__typetests__/toBeCallableWith.test.ts:68:35 ❭ when target is a type ❭ expression requires an argument

Error: Type expression can be called without arguments.

  71 |   test("type expression can be called without arguments", () => {
  72 |     expect<() => null>().type.toBeCallableWith<[]>();
> 73 |     expect<() => null>().type.not.toBeCallableWith<[]>();
     |                                   ^
  74 |   });
  75 | 
  76 |   test("type expression does not take arguments", () => {

       at ./__typetests__/toBeCallableWith.test.ts:73:35 ❭ when target is a type ❭ type expression can be called without arguments

Error: Type expression does not take arguments.

  76 |   test("type expression does not take arguments", () => {
  77 |     expect<() => null>().type.not.toBeCallableWith<["one"]>();
> 78 |     expect<() => null>().type.toBeCallableWith<["one"]>();
     |                               ^
  79 |   });
  80 | 
  81 |   test("type expression can be called with provided argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:78:31 ❭ when target is a type ❭ type expression does not take arguments

Error: Type expression can be called with provided argument.

  81 |   test("type expression can be called with provided argument", () => {
  82 |     expect<(a: string) => string>().type.toBeCallableWith<["one"]>();
> 83 |     expect<(a: string) => string>().type.not.toBeCallableWith<["one"]>();
     |                                              ^
  84 |   });
  85 | 
  86 |   test("type expression requires an argument", () => {

       at ./__typetests__/toBeCallableWith.test.ts:83:46 ❭ when target is a type ❭ type expression can be called with provided argument

Error: Type expression requires 1 argument.

  86 |   test("type expression requires an argument", () => {
  87 |     expect<(a: string) => string>().type.not.toBeCallableWith<[]>();
> 88 |     expect<(a: string) => string>().type.toBeCallableWith<[]>();
     |                                          ^
  89 |   });
  90 | });
  91 | 

       at ./__typetests__/toBeCallableWith.test.ts:88:42 ❭ when target is a type ❭ type expression requires an argument

"
`;

exports[`toBeCallableWith: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeCallableWith.test.ts
  when target is a value
    × expression can be called without arguments
    × expression does not take arguments
    × expression can be called with provided argument
    × expression requires an argument
    × type expression can be called without arguments
    × type expression does not take arguments
    × type expression can be called with provided argument
    × type expression requires an argument
  when target is a type
    × expression can be called without arguments
    × expression does not take arguments
    × expression can be called with provided argument
    × expression requires an argument
    × type expression can be called without arguments
    × type expression does not take arguments
    × type expression can be called with provided argument
    × type expression requires an argument

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      16 failed, 16 total
Assertions: 16 failed, 16 passed, 32 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
